--- a/src/app/todo/todo-input/todo-input.component.html
+++ b/src/app/todo/todo-input/todo-input.component.html
@@ -1,3 +1,3 @@
-<p>
-  todo-input works!
-</p>
+<form [formGroup]="todoForm" (ngSubmit)="submit()">
+  <input type="text" placeholder="New todo item" formControlName="todo">
+</form>
