--- a/src/app/todo/todo-list/todo-list.component.html
+++ b/src/app/todo/todo-list/todo-list.component.html
@@ -1,3 +1,5 @@
-<p>
-  todo-list works!
-</p>
+<ul>
+  <li *ngFor="let item of items">
+    <input type="checkbox" [checked]="item.completed" (change)="toggle.emit(item)"> {{ item.title }}
+  </li>
+</ul>
