--- a/src/app/todo/todo/todo.component.html
+++ b/src/app/todo/todo/todo.component.html
@@ -1,3 +1,3 @@
-<p>
-  todo works!
-</p>
+<app-todo-input (todoAdded)="addNewTodo($event)"></app-todo-input>
+<app-todo-filter (filter)="filterChange($event)"></app-todo-filter>
+<app-todo-list [items]="items | async" (toggle)="toggleTodo($event)"></app-todo-list>
